--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 3 : Repeating untill the Cost Function Converge at Local Mimimum"
+    "### Step 3 : Repeating untill the Cost Function Converge at Local Mimimum()"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2 Compute Error or Cost Function\n",
+    "### Step 2 [Compute Error or Cost Function](https://github.com/Avyukth/Linear-Regression/blob/master/Cost%20Function%20_%20Coursera.pdf)\n",
     "![Sum of squared distances formula (to calculate our error)](https://spin.atomicobject.com/wp-content/uploads/linear_regression_error1.png)"
    ]
   },
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1 : [Design The Model ](https://www.google.com)\n",
+    "### Step 1 : [Design The Model ](https://github.com/Avyukth/Linear-Regression/blob/master/Model%20Representation%20_%20Coursera.pdf)\n",
     "\n"
    ]
   },
