--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 3 : Repeating untill the Cost Function Converge at Local Mimimum()"
+    "### Step 3 : [Repeating untill the Cost Function Converge at Local Mimimum](https://github.com/Avyukth/Linear-Regression/blob/master/Gradient%20Descent%20For%20Linear%20Regression%20_%20Coursera.pdf)"
    ]
   },
   {
